--- a/Modulo_4_Kubernates/03_sesion/appnode/DemoApp/Dockerfile
+++ b/Modulo_4_Kubernates/03_sesion/appnode/DemoApp/Dockerfile
@@ -1,14 +1,13 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-WORKDIR /usr
-COPY DemoApp/DemoApp.csproj /src/DemoApp
-RUN dotnet restore DemoApp/DemoApp.csproj
+WORKDIR /src
+COPY DemoApp.csproj .
+RUN dotnet restore DemoApp.csproj
 COPY . .
-RUN dotnet publish DemoApp/DemoApp.csproj -c Release -o /app
+RUN dotnet publish DemoApp.csproj -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
 COPY --from=build /app .
-
 EXPOSE 80
 ENV ASPNETCORE_URLS=http://+:80
 ENTRYPOINT [ "dotnet", "DemoApp.dll" ]
